Video Player: fix controls off-screen

--- a/teamapps-client/less/components/UiVideoPlayer.less
+++ b/teamapps-client/less/components/UiVideoPlayer.less
@@ -25,6 +25,7 @@
   .mejs__overlay-button {
     filter: drop-shadow(2px 2px 5px rgba(0, 0, 0, .5));
   }
+
   &.not-playable {
     .mejs__overlay-play,
     .mejs__controls {
@@ -36,6 +37,7 @@
     img {
       display: none;
     }
+
     .mejs__cannotplay {
       padding: 20px;
       font-size: 110%;
@@ -43,10 +45,14 @@
     }
   }
 
-  video {
-    width: 100%;
-    height: 100%;
+  .mejs__container {
+    max-height: 100%;
+
+    video {
+      max-height: 100%
+    }
   }
+
 
   &.hide-controls {
     .mejs__container .mejs__controls {
@@ -57,9 +63,11 @@
   &.poster-cover .mejs__poster {
     background-size: cover;
   }
+
   &.poster-contain .mejs__poster {
     background-size: contain;
   }
+
   &.poster-original .mejs__poster {
     background-size: auto;
   }
